Reconfigure Postgres tasks

--- a/roles/postgres/tasks/main.yml
+++ b/roles/postgres/tasks/main.yml
@@ -12,8 +12,6 @@
     - postgresql-contrib-9.4
     - postgresql-server-dev-9.4
     - libpq-dev
-    - postgresql-9.4-postgis-2.1
-    - postgresql-9.4-postgis-scripts
     - python-psycopg2
 - name: Configure Postgres
   sudo_user: postgres
@@ -25,12 +23,6 @@
   copy: src=pg_hba.conf dest=/etc/postgresql/9.4/main/pg_hba.conf owner=postgres group=postgres force=yes
   notify:
     - Restart Postgres
-- name: "Create datascientist user for Postgres"
+- name: "Create user for Postgres"
   sudo_user: postgres
-  postgresql_user: name={{ database.user }} password={{ secret.db_password }} role_attr_flags=CREATEDB
-- name: "Create PostgreSQL databases"
-  sudo_user: postgres
-  postgresql_db: name={{ database.name }} owner={{ database.user }} state=present
-- name: "Add PostGIS"
-  sudo_user: postgres
-  postgresql_ext: name=postgis db=cfs
+  postgresql_user: name={{ homebase.user }} password={{ secret.postgres_password }} role_attr_flags=CREATEDB
